Add more nodes to base state

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
+.black-background {
+  background-color: black;
+}
 .red-background {
   background-color: red;
 }
+.white-text {
+  color: white;
+}
+
